# clock

./: .gitignore  README.md  firstruntime.txt  main.py  pyproject.toml  secrets_example.py  webtime.py
esphome/: README.md  esp32-esphome.yaml  secrets.yaml
tests/: conftest.py  test_setup_validation.py
